# ksp-orbit-planner

./: .gitignore  Cargo.toml  README.md  ksp-bodies.txt  rustfmt.toml
latex/: frame-transform.tex  kepler-math.tex  supplementary-math.tex
src/: anomaly.rs  body.rs  camera.rs  consts.rs  file.rs  geometry.rs  lib.rs  main.rs  maneuver.rs  orbit.rs  root_finding.rs  ship.rs  simple_render.rs  state.rs  stumpff.rs  universe.rs
src/astro/: mod.rs  orbit.rs  orbit_methods.rs  state.rs
src/astro/orbit/: mod.rs  state.rs  state_methods.rs  timed_orbit.rs
src/events/: event.rs  event_search.rs  mod.rs  soi_change.rs  upcoming_events.rs
src/gui/: camera.rs  controller.rs  mod.rs  renderer.rs  scene.rs  simple_render.rs  simulation.rs  view.rs
src/gui/renderers/: marker_renderer.rs  mod.rs  orbit_renderer.rs  sphere_renderer.rs  utils.rs
src/math/: anomaly.rs  frame.rs  geometry.rs  intervals.rs  mod.rs  root_finding.rs  stumpff.rs
src/model/: mod.rs
src/model/events/: intervals.rs  mod.rs  soi_change.rs
src/model/orrery/: body.rs  mod.rs  ship.rs
src/model/timeline/: mod.rs  upcoming_events.rs
src/orrery/: body.rs  mod.rs  orbit.rs  orrery.rs  ship.rs  state.rs
src/universe/: body.rs  event.rs  event_search.rs  frame.rs  mod.rs  orbit.rs  orrery.rs  ship.rs  state.rs  universe.rs
tests/: events.rs
