[package]
name = "rust-ksp"
version = "0.1.0"
authors = ["Henry Swanson <henryswanson94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.34.0"
nalgebra = "^0.30"  # Must match that in kiss3d
simba = "*"  # Must match that in nalgebra
approx = "^0.5.1"
plotters = "*"
